# oord-verify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
oord_verify/: __init__.py  cli.py
oord_verify.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
oord_verify/notary_client/: client.py  errors.py
oord_verify/verify/: crypto.py  human.py  merkle.py  output.py  tl.py  verifier.py  zipio.py
schemas/: verify_output_v1.json
scripts/: ctx.sh
tests/: test_json_invariants.py  test_online_semantics.py  test_protocol_vectors_v1_replay.py  test_smoke_cli.py  test_vectors_v1.py  test_verify_json_schema.py  util.py
