[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oord-verify"
version = "0.1.0"
description = "Oord reference verifier + CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41"]
dev = ["pytest>=7.4", "jsonschema>=4.22", "cryptography>=41"]

[project.scripts]
oord = "oord_verify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oord_verify*"]
